--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
   "license": "Unlicense",
   "private": true,
   "dependencies": {
+    "@mysql/xdevapi": "^8.0.13",
     "connect": "^3.2.0",
+    "cors": "^2.8.5",
     "js-yaml": "^3.3.0",
-    "swagger-tools": "0.10.1",
-    "@mysql/xdevapi": "^8.0.13"
+    "swagger-tools": "0.10.1"
   }
 }
